# llmconduit

./: .dockerignore  .gitignore  AGENTS.md  ANTHROPIC_STREAM_CONFORMANCE_PLAN.md  Cargo.toml  DASHBOARD_PLAN.md  Dockerfile  E2E-TRACE-PLAN.md  FEATURES.md  GAPS.md  README.md  TEST_PORT_CONTEXT.md  benchmark_results.json  build.rs  llmconduit-architecture.md
.ralph/: .current_session  COMPLETED_TASKS.md  GOAL.md  GOAL.turn-capture.md  IMPLEMENTATION_PLAN.graceful-image.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.turn-capture.md  REVIEW_PROTOCOL.md  golden_8001_native_messages.sse
.ralph/archive/: IMPLEMENTATION_PLAN.dashboard-thermo.md  IMPLEMENTATION_PLAN.e2-done.md
.ralph/archive/2026-06-22-argus-dashboard/: ARCHIVE.md  GOAL.md  orchestrate.dashboard-topic13.state.md
.ralph/specs/: 01-stats-strip-accuracy.md  02-spine-phase-timestamps.md  03-spine-attempts-trace.md  04-spine-client-label.md  05-spine-response-capture.md  06-spine-max-context.md  07-spine-cost-usage-confidence.md  08-token-economics.md  09-context-window-utilization.md  10-latency-breakdown.md  11-failover-attempt-trace-ui.md  12-per-provider-metrics-backend.md  13-per-provider-latency-ui.md  14-failure-taxonomy.md  15-client-attribution-ui.md  16-control-room-overview.md  D13-dashboard-rest-routes-and-price-config.md  D3-telemetry-guard-and-usage.md  D7-dashboard-auth-and-ws.md  D9-frontend-scaffold.md  E1-hallucinated-tool-call-repair.md  E2-graceful-image-degradation.md  F1-durable-turn-capture.md  G1-context-window-retry.md  G2-model-family-reshaping.md  G3-context-budgeting.md  G4-image-agent.md  G5-debug-log-rotation.md  G6-sse-buffer-cap.md  G7-config-routes.md  G8-reasoning-stream-handling.md  P1-output-config-effort.md  T1-leaf-profile-resolution.md  T2-routing-candidate-plan.md  T4-vision-module-split.md  T7-typed-terminal-reason.md  U6-hop-by-hop-header-dedup.md  U7-tool-delta-gate-running-bytes.md  anthropic-sse-conformance.md
benches/: metrics.rs
dashboard-frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.setup.ts
dashboard-frontend/e2e/: dashboard.spec.ts  harness.ts  shot.mjs
dashboard-frontend/src/: App.tsx  index.css  main.tsx
dashboard-frontend/src/api/: attempts.test.ts  attempts.ts  client.test.ts  client.ts  connection.test.ts  connection.ts  mock.ts  types.ts  ws.fixtures.ts  ws.test.ts  ws.ts
dashboard-frontend/src/components/: LoginShell.test.tsx  LoginShell.tsx  NavTabs.tsx  Scrubber.tsx  StatsStrip.tsx  testHarness.tsx
dashboard-frontend/src/config/: env.test.ts  env.ts
dashboard-frontend/src/design/: DESIGN_NOTES.md  fonts.ts  palette.ts  tokens.ts
dashboard-frontend/src/lib/: cn.ts  toolCalls.test.ts  toolCalls.ts
dashboard-frontend/src/router/: useHashRoute.ts
dashboard-frontend/src/store/: authStore.ts  dashboardStore.test.ts  dashboardStore.ts  flowFilterStore.test.ts  flowFilterStore.ts  hooks.ts  useMetricStream.test.tsx  useMetricStream.ts  useSankeyWindow.test.tsx  useSankeyWindow.ts  useTopologyQuery.ts
dashboard-frontend/src/views/: FlowsView.test.tsx  FlowsView.tsx  SankeyView.tsx  TheaterView.test.tsx  TheaterView.tsx  TopologySankeyViews.test.tsx  TopologyView.tsx  placeholders.tsx  registry.ts
dashboard-frontend/src/viz/: DemoViz.tsx  ForceDemoViz.tsx  Sparkline.test.tsx  Sparkline.tsx  demoVizState.ts  forceDemoState.ts  sparklineState.ts  useImperativeViz.test.tsx  useImperativeViz.ts
src/: cli.rs  config.rs  config_watcher.rs  dashboard_api.rs  dashboard_auth.rs  dashboard_flow.rs  dashboard_login.html  dashboard_ui.rs  dashboard_ws.rs  debug.html  debug_app.js  debug_ui.rs  engine.rs  error.rs  http.rs  lib.rs  log_rotation.rs  main.rs  metrics.rs  monitor.rs  proxy_headers.rs  raw.rs  redaction.rs  replay.rs  request_log.rs  search.rs  sse_guard.rs  test_alloc_probe.rs  tool_delta_gate.rs  turn_capture.rs  ui.rs  upstream.rs  vision.rs
src/adapters/: anthropic_to_responses.rs  chat_completions.rs  chat_to_responses.rs  mod.rs  responses_to_anthropic.rs  responses_to_chat.rs
src/models/: anthropic.rs  chat.rs  responses.rs
src/sse_guard/: mod.rs  tests.rs
src/vision/: cache.rs  client.rs  mod.rs  strip.rs
tests/: dashboard_provider_health.rs  dashboard_serving_token.rs  gateway.rs  http_body_limit.rs  image_agent.rs  port_config.rs  port_config_routing.rs  port_errors.rs  port_logging.rs  port_response_translation.rs  port_routing.rs  port_server.rs  port_streaming.rs  port_streaming_peek.rs  port_translation.rs
tests/common/: mod.rs
(+131 files in other folders)
