[package]
name = "llmconduit"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
chrono = { version = "0.4", features = ["clock"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
dirs = "6"
eventsource-stream = "0.2"
futures = "0.3"
hex = "0.4"
# Dashboard session-cookie auth (D7): HMAC-SHA256 signing (`hmac` + the existing
# `sha2`), constant-time comparison of tokens/MACs (`subtle`), and base64url
# cookie encoding (`base64`). Secrets are read from the environment in the auth
# layer and never stored on the persisted `Config`.
base64 = "0.22"
hmac = "0.12"
subtle = "2"
http = "1"
# `LengthLimitError` (re-exported by axum's `to_bytes`) so `http.rs` can tell an
# over-cap inbound body (413) from a truncated/broken stream (400). Already in
# the graph via axum; a normal (not dev) dep because it is used in `src/`.
http-body-util = "0.1"
# Embed the dashboard SPA (`$OUT_DIR/dashboard_dist/`, materialized by build.rs)
# into the binary at compile time (D8); the `static Dir<'static>` binding in
# `dashboard_ui.rs` is what makes `include_dir!` type-check.
include_dir = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Read-only TOML config support (G7). `parse`+`serde` only; we never serialize
# back to TOML (config is written as YAML), so `display` is intentionally off.
# `preserve_order` makes the TOML deserializer iterate tables in DOCUMENT order
# (not sorted), so `model_routes` glob precedence follows declaration order
# identically to the YAML path — load-bearing for first-match-wins routing.
toml = { version = "1", default-features = false, features = ["parse", "serde", "preserve_order"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
# D6 AbortHub: `CancellationToken` for server-side flow kill. Race-free `cancelled()`
# future (no lost-wakeup, unlike a hand-rolled `Notify`) composed alongside every
# engine `tx.closed()` client-hangup select. Already a transitive dep; the `rt` feature
# is the one that gates `tokio_util::sync::CancellationToken` (it pulls in the token's
# `futures-util` + `tokio/sync` machinery) in tokio-util 0.7.
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
# `test-util` enables tokio's paused-clock test controls (`pause`/`advance`,
# `#[tokio::test(start_paused = true)]`) used to deterministically exercise the
# axum SSE keep-alive idle timer in tests. `net`/`io-util` drive the real-TCP WS
# handshake test (`axum::serve` + a raw upgrade request) that exercises the
# `/dashboard/ws` cookie+Origin auth gate end-to-end (D7b).
tokio = { version = "1", features = ["test-util", "net", "io-util"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
# D5: criterion benches the zero-cost `MetricsLayer::disabled()` path (no work, no
# lock) vs the enabled record path, and per-domain seq updates under contention.
criterion = "0.5"

[[bench]]
name = "metrics"
harness = false
